--- a/src/app/admin/layout.module.css
+++ b/src/app/admin/layout.module.css
@@ -68,7 +68,7 @@
 .content {
   flex: 1;
   padding: 32px;
-  padding-bottom: 60px;
+  padding-bottom: 80px;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -133,7 +133,7 @@
   }
   .content {
     padding: 16px;
-    padding-bottom: 50px;
+    padding-bottom: 64px;
   }
   .content footer {
     left: 0;
