--- a/src/app/admin/page.module.css
+++ b/src/app/admin/page.module.css
@@ -216,6 +216,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  margin-bottom: 60px;
 }
 
 .section {
